--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,16 +7,22 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
-        <activity android:name=".TopListActivity" >
+        android:theme="@style/AppTheme">
+        <activity
+            android:name=".TopListActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".DetailActivity"></activity>
-        <activity android:name=".InputActivity"></activity>
+        <activity
+            android:name=".DetailActivity"
+            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".InputActivity"
+            android:screenOrientation="portrait"></activity>
 
     </application>
 
